--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ categories = [ "web-programming" ]
 homepage = "https://github.com/0skar16/bary"
 repository = "https://github.com/0skar16/bary"
 description = "A framework to build http servers with rust backend and vite frontend"
+license = "GPL-3"
 readme = "README.md"
 [dependencies]
 anyhow = "1.0.70"
 
-bary-macros = {path = "bary-macros"}
-bary-config = {path = "bary-config"}
-bary-server = { path = "bary-server" }
+bary-macros = {path = "bary-macros", version = "*"}
+bary-config = {path = "bary-config", version = "*"}
+bary-server = { path = "bary-server", version = "*"}
 tar = "0.4.38"
 [workspace]
 members = ["bary-macros", "bary-config", "bary-server"]
