--- a/bary-server/Cargo.toml
+++ b/bary-server/Cargo.toml
@@ -2,10 +2,15 @@
 name = "bary-server"
 version = "0.1.0"
 edition = "2021"
-
+homepage = "https://github.com/0skar16/bary"
+repository = "https://github.com/0skar16/bary"
+description = "A framework to build http servers with rust backend and vite frontend"
+license = "GPL-3"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.70"
 rocket = "0.4"
 tar = "0.4.38"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_yaml = "0.9.21"
