--- a/bary-server/Cargo.toml
+++ b/bary-server/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 homepage = "https://github.com/0skar16/bary"
 repository = "https://github.com/0skar16/bary"
 description = "A framework to build http servers with rust backend and vite frontend"
-license = "GPL-3"
+license = "GPL-3.0-only"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
