--- a/bary-macros/Cargo.toml
+++ b/bary-macros/Cargo.toml
@@ -12,7 +12,7 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bary-server = {path = "../bary-server", version = "*"}
+bary-server = {path = "../bary-server", version = "0"}
 quote = "1.0.26"
 syn = { version = "2.0.14", features = ["full"] }
 serde = { version = "1.0.160", features = ["derive"] }
